After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 656546 - crash with untracked apps
crash with untracked apps
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
: 657214 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-08-15 08:11 UTC by Colin Walters
Modified: 2011-08-24 16:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
reproducer (683 bytes, text/x-python)
2011-08-15 08:11 UTC, Colin Walters
  Details
ShellApp: Avoid crashing during state transition for window-backed apps (1.77 KB, patch)
2011-08-23 16:05 UTC, Colin Walters
committed Details | Review

Description Colin Walters 2011-08-15 08:11:37 UTC
Created attachment 193843 [details]
reproducer

See attached reproducer.
Comment 1 Jasper St. Pierre (not reading bugmail) 2011-08-15 08:16:06 UTC
(I wrote this testcase for #643302)

Steps:

1. Click Open Dialog
2. Go to overview
3. Close the main dialog
4. Go to overview
5. Boom
Comment 2 Colin Walters 2011-08-23 16:05:42 UTC
Created attachment 194494 [details] [review]
ShellApp: Avoid crashing during state transition for window-backed apps

During a state transition from running to not-running for
window-backend apps, it's possible we get a request for the icon.
Avoid asserting here and just return an empty image.
Comment 3 Jasper St. Pierre (not reading bugmail) 2011-08-24 10:26:39 UTC
*** Bug 657214 has been marked as a duplicate of this bug. ***
Comment 4 Colin Walters 2011-08-24 16:33:49 UTC
Attachment 194494 [details] pushed as fa0268f - ShellApp: Avoid crashing during state transition for window-backed apps